Fix: show navbar by default - fix collapse display logic

--- a/frontend/css/bootstrap-alternative.css
+++ b/frontend/css/bootstrap-alternative.css
@@ -97,14 +97,13 @@ body {
 .navbar-toggler-icon {
     display: inline-block;
     width: 1.5em;
-    height: 1.5em;
+    height: 1em;
     vertical-align: middle;
-    border-top: 0.25em solid;
-    border-right: 0.25em solid;
-    border-bottom: 0.25em solid;
-    border-left: 0.25em solid transparent;
-    border-radius: 0.25em;
-    animation: spinner-grow 0.75s linear infinite;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 24'%3e%3cpath stroke='%23000' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    position: relative;
 }
 
 @keyframes spinner-grow {
@@ -116,11 +115,28 @@ body {
     flex-basis: 100%;
     flex-grow: 1;
     align-items: center;
+    display: flex;
+    width: 100%;
+}
+
+.navbar-collapse.collapse {
     display: flex !important;
 }
 
-.navbar-collapse.collapse:not(.show) {
-    display: none !important;
+.navbar-collapse.collapse.show {
+    display: flex !important;
+}
+
+@media (max-width: 991.98px) {
+    .navbar-collapse.collapse {
+        display: none !important;
+        flex-basis: 100%;
+    }
+    
+    .navbar-collapse.collapse.show {
+        display: flex !important;
+        flex-basis: 100%;
+    }
 }
 
 @media (max-width: 991.98px) {
